--- a/js-addnewcard/index.html
+++ b/js-addnewcard/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -45,12 +45,33 @@
             margin-right: 10px;
             /* İstenirse aralara boşluk ekleyebilirsiniz */
         }
+
+        .card-title {
+            display: inline-block;
+        }
+
+        .card span {
+            float: right;
+            opacity: 0;
+            cursor: pointer;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .card:hover span {
+            opacity: 1;
+        }
+
+        .card:hover {
+            width: 25%;
+            height: 170px;
+            transition: all .6s;
+        }
     </style>
 </head>
 
 <body>
     <div class="d-grid gap-2 col-4 mx-auto">
-        <button class="btn btn-primary p-3 m-3" type="button" id="addnewcard-form">Add New Card</button>
+        <button class="btn btn-primary p-3 m-3" type="button" id="addnewcard-form"  style="display: inline-block;">Add New Card</button>
     </div>
     <!-- /////////////////////////////////////////////// -->
     <div class="ana d-grid gap-2 col-8 mx-auto mt-5 border p-3 bg-white border-primary border-3" id="ana"
@@ -135,10 +156,10 @@
     <!-- /////////////////////////////////////////////// -->
 
     <div class="cards" id="cards">
-
     </div>
 
     <script>
+
         let backgroundcolor;
         let backgroundcolorspecial;
         function RadioColorControls() {
@@ -169,13 +190,12 @@
                 backgroundcolor = "info";
             }
             if (bg_special.checked) {
-                backgroundcolorspecial = bg_special.value;
+                backgroundcolorspecial = document.getElementById("radioNoLabelSpecialColor").value;
             }
-            if(!bg_special.checked){
+            if (!bg_special.checked) {
                 backgroundcolorspecial = null;
             }
         }
-
         let addnewcards_button = document.getElementById("addnewcard-form").addEventListener("click", function () {
             //Bu kod, içinde bulunduğumuz click fonksiyonu çalıştığında arkaplanın opacitysini düşürerek form ekranını ortaya çıkarır.
             document.querySelector(".cards").style = "opacity:30%;";
@@ -196,32 +216,59 @@
             const card_header = document.getElementById("card-header-input").value;
             const card_text = document.getElementById("card-text-input").value;
             const cards = document.getElementById("cards");
+            console.log(cards);
             let card;
-            if (backgroundcolorspecial == null && backgroundcolor.length>0) {
+            if (backgroundcolorspecial == null && backgroundcolor.length > 0) {
                 card = `
-                <div class="card mb-3 bg-${backgroundcolor}">
+                <div class="card mb-3 bg-${backgroundcolor} animate__bounceIn" id="card" >
                     <div class="card-body">
                         <h5 class="card-title">${card_header}</h5>
+                        <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" id="trash">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                            </svg>    
+                        </span>
+                        <p class="card-text">${card_text}</p>
+                    </div>
+                </div>`;
+            } else if (backgroundcolorspecial.length > 0) {
+                card = `
+                <div class="card mb-3 animate__bounceIn" id="card" style="background-color:${backgroundcolorspecial};">
+                    <div class="card-body">
+                        <h5 class="card-title">${card_header}</h5>
+                        <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" id="trash">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                            </svg>    
+                        </span>
                         <p class="card-text">${card_text}</p>
                     </div>
                 </div>`;
             }
-            else if (backgroundcolorspecial.length>0) {
-                card = `
-                <div class="card mb-3" style="background-color:${backgroundcolorspecial};">
-                    <div class="card-body">
-                        <h5 class="card-title">${card_header}</h5>
-                        <p class="card-text">${card_text}</p>
-                    </div>
-                </div>`;
-            }
-            console.log(backgroundcolor +"bgcolor");
-            console.log(backgroundcolorspecial +"bgspecialcolor");
             document.querySelector(".cards").style = "opacity:100%;"
             document.getElementById("ana").style = "opacity: 0; pointer-events:none;";
-
             cards.insertAdjacentHTML("afterbegin", card);
         });
+        let deletecard=document.getElementById("trash").addEventListener("click", function deleted() {
+            
+        });
+        // document.getElementById("card").addEventListener("mouseover", function () {
+        //     this.classList.add("animate__animated", "animate__bounceIn");
+        // });
+
+        // var spanElements = document.getElementsByTagName("span");
+
+        // for (var i = 0; i < spanElements.length; i++) {
+        //     spanElements[i].addEventListener("mouseover", function () {
+        //         this.style.opacity = "1";
+        //     });
+
+        //     spanElements[i].addEventListener("mouseout", function () {
+        //         this.style.opacity = "0.3";
+        //     });
+        // }
 
     </script>
 </body>
