--- a/js-addnewcard/index.html
+++ b/js-addnewcard/index.html
@@ -71,7 +71,8 @@
 
 <body>
     <div class="d-grid gap-2 col-4 mx-auto">
-        <button class="btn btn-primary p-3 m-3" type="button" id="addnewcard-form"  style="display: inline-block;">Add New Card</button>
+        <button class="btn btn-primary p-3 m-3" type="button" id="addnewcard-form" style="display: inline-block;">Add
+            New Card</button>
     </div>
     <!-- /////////////////////////////////////////////// -->
     <div class="ana d-grid gap-2 col-8 mx-auto mt-5 border p-3 bg-white border-primary border-3" id="ana"
@@ -201,7 +202,6 @@
             document.querySelector(".cards").style = "opacity:30%;";
 
             document.getElementById("ana").style = "opacity: 1; pointer-events:all;";
-            document.getElementById("ana").classList.add("animate__animated animate__bounceIn animate__delay-2s");
 
             //Altta bulunan kodda, doldurulan formdaki veriler altta bulunan buttona lik olunduğunda yeni bir kart oluşturmaya çalışır
         });
@@ -213,8 +213,8 @@
         });
         let addnewcard = document.getElementById("addnewcard").addEventListener("click", function () {
             RadioColorControls();
-            const card_header = document.getElementById("card-header-input").value;
-            const card_text = document.getElementById("card-text-input").value;
+            const card_header = document.getElementById("card-header-input");
+            const card_text = document.getElementById("card-text-input");
             const cards = document.getElementById("cards");
             console.log(cards);
             let card;
@@ -222,54 +222,48 @@
                 card = `
                 <div class="card mb-3 bg-${backgroundcolor} animate__bounceIn" id="card" >
                     <div class="card-body">
-                        <h5 class="card-title">${card_header}</h5>
+                        <h5 class="card-title">${card_header.value}</h5>
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" id="trash">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                             <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                             </svg>    
                         </span>
-                        <p class="card-text">${card_text}</p>
+                        <p class="card-text">${card_text.value}</p>
                     </div>
                 </div>`;
             } else if (backgroundcolorspecial.length > 0) {
                 card = `
                 <div class="card mb-3 animate__bounceIn" id="card" style="background-color:${backgroundcolorspecial};">
                     <div class="card-body">
-                        <h5 class="card-title">${card_header}</h5>
+                        <h5 class="card-title">${card_header.value}</h5>
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" id="trash">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                             <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                             </svg>    
                         </span>
-                        <p class="card-text">${card_text}</p>
+                        <p class="card-text">${card_text.value}</p>
                     </div>
                 </div>`;
             }
             document.querySelector(".cards").style = "opacity:100%;"
             document.getElementById("ana").style = "opacity: 0; pointer-events:none;";
             cards.insertAdjacentHTML("afterbegin", card);
+
         });
-        let deletecard=document.getElementById("trash").addEventListener("click", function deleted() {
-            
+        document.addEventListener("click", function (event) {
+            // Tıklanan elementin bir delete butonu olup olmadığını kontrol et
+            if (event.target.closest('.card span')) {
+                // Tıklanan delete butonuna ait olan kartı bul
+                var cardToDelete = event.target.closest('.card');
+
+                // Kart varsa, onu sil
+                if (cardToDelete) {
+                    cardToDelete.remove();
+                }
+            }
         });
-        // document.getElementById("card").addEventListener("mouseover", function () {
-        //     this.classList.add("animate__animated", "animate__bounceIn");
-        // });
-
-        // var spanElements = document.getElementsByTagName("span");
-
-        // for (var i = 0; i < spanElements.length; i++) {
-        //     spanElements[i].addEventListener("mouseover", function () {
-        //         this.style.opacity = "1";
-        //     });
-
-        //     spanElements[i].addEventListener("mouseout", function () {
-        //         this.style.opacity = "0.3";
-        //     });
-        // }
-
     </script>
 </body>
 
