--- a/js-addnewcard/index.html
+++ b/js-addnewcard/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <script>
-
+        let sayac;
         let backgroundcolor;
         let backgroundcolorspecial;
         function RadioColorControls() {
@@ -208,8 +208,8 @@
         });
         //Bu kod parçasi X butonuna basıldığında tetiklernir
         document.getElementById("closeforms").addEventListener("click", function () {
-            document.querySelector(".cards").style = "opacity:100%;"
-            document.getElementById("ana").style = "opacity: 0; pointer-events:none;";
+        document.querySelector(".cards").style = "opacity:100%;"
+        document.getElementById("ana").style = "opacity: 0; pointer-events:none;";
         });
         let addnewcard = document.getElementById("addnewcard").addEventListener("click", function () {
             RadioColorControls();
@@ -218,24 +218,19 @@
             const cards = document.getElementById("cards");
             console.log(cards);
             let card;
-            if (backgroundcolorspecial == null && backgroundcolor.length > 100) {
-                //if (card_text.length > 100) {
-                //    card_text = card_text.substring(0, 100);
-                //    console.log(card_text);
-                //
-                //}
+            if (backgroundcolor.length > 0) {
                 card = `
-                <div class="card mb-3 bg-${backgroundcolor} animate__bounceIn" id="card" >
+                <div class="card mb-3 bg-${backgroundcolor} animate__bounceIn">
                     <div class="card-body">
                         <h5 class="card-title">${card_header.value}</h5>
                         <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" id="trash">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash trash" viewBox="0 0 16 16">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                             <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                             </svg>    
                         </span>
                         <span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-pencil-square" id="pencil" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-pencil-square pencil" viewBox="0 0 16 16">
                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
                         </svg>
@@ -245,17 +240,17 @@
                 </div>`;
             } else if (backgroundcolorspecial.length > 0) {
                 card = `
-                <div class="card mb-3 animate__bounceIn" id="card" style="background-color:${backgroundcolorspecial};">
+                <div class="card mb-3 animate__bounceIn" style="background-color:${backgroundcolorspecial};">
                     <div class="card-body">
                         <h5 class="card-title">${card_header.value}</h5>
                         <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" id="trash">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-trash trash" viewBox="0 0 16 16">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                             <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                             </svg>    
                         </span>
                         <span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-pencil-square" id="pencil" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-pencil-square pencil" viewBox="0 0 16 16">
                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
                         </svg>
@@ -267,40 +262,51 @@
             document.querySelector(".cards").style = "opacity:100%;"
             document.getElementById("ana").style = "opacity: 0; pointer-events:none;";
             cards.insertAdjacentHTML("afterbegin", card);
+            sayac++;
         });
         document.addEventListener("click", function (event) {
             // Tıklanan elementin bir delete butonu olup olmadığını kontrol et
-            if (event.target.closest('.card #trash')) {
+            if (event.target.closest('.card .trash')) {
                 // Tıklanan delete butonuna ait olan kartı bul
                 var cardToDelete = event.target.closest('.card');
                 // Kart varsa, onu sil
                 if (cardToDelete) {
                     cardToDelete.remove();
+                    sayac--;
                 }
             }
         });
         document.addEventListener("click", function (event) {
             // Tıklanan elementin bir refresh butonu olup olmadığını kontrol et
-            if (event.target.closest('.card #pencil')) {
+            if (event.target.closest('.card .pencil')) {
                 // Tıklanan delete butonuna ait olan kartı bul
                 var cardToRefresh = event.target.closest('.card');
-                var card_header_refresh = cardToRefresh.querySelector("#card-header-input");
-                var card_text_refresh = cardToRefresh.querySelector("#card-text-input");
                 // Kart varsa, onu yenile
                 if (cardToRefresh) {
+
                     document.querySelector(".cards").style = "opacity:30%;";
                     document.getElementById("ana").style = "opacity: 1; pointer-events:all;";
-                    const card_header = document.getElementById("card-header-input");
-                    const card_text = document.getElementById("card-text-input");
-                    document.getElementById("addnewcard").id="refreshtocard";
+                    document.getElementById("addnewcard").id = "refreshtocard";
+                    document.getElementById("refreshtocard").value = "Refresh to card";
+                    var card_header_refresh = cardToRefresh.querySelector("#card-header-input").value;
+                    var card_text_refresh = cardToRefresh.querySelector("#card-text-input").value;
+                    const card_header_ref = document.getElementById("card-header-input").value;
+                    const card_text_ref = document.getElementById("card-text-input").value;
+
+
+                    //////////////////////////////////////////////////////////////////////////////////////////////
                     document.getElementById("refreshtocard").addEventListener("click", function () {
-                        card_header_refresh.value = card_header;
-                        card_text_refresh.value = card_text;
+                        card_header_refresh.value = card_header_ref;
+                        card_text_refresh.value = card_text_ref;
                         document.querySelector(".cards").style = "opacity:100%;"
                         document.getElementById("ana").style = "opacity: 0; pointer-events:none;";
                         //burada yapılacak işlem, card içinde yazılı olan value değerine bizim yukarıda refresh ile tanımladığımız kısım atanacak ve çarpı butonun basılmış gibi herşey düzelecek, yani insertAdjaventElement olayı gerçekleşmeyecek.
                     });
                 }
+            }
+            else {
+                document.getElementById("refreshtocard").id = "addnewcard";
+                document.getElementById("addnewcard").value = "add new card";
             }
         });
     </script>
