--- a/js-addnewcard/index.html
+++ b/js-addnewcard/index.html
@@ -250,11 +250,11 @@
                         <label class="btn" for="btnsub"> &emsp;X<sub>2 &emsp;</sub></label>
                     </div>
                     <div class="float-sm-end">
-                        <input type="radio" class="btn-check" id="headerbtn" autocomplete="off">
-                        <label class="btn" for="headerbtn" name="conhead">HEADER</label>
+                        <input type="radio" class="btn-check" id="headerbtn" autocomplete="off" name="conhead">
+                        <label class="btn" for="headerbtn">&emsp;HEADER&emsp;</label>
 
-                        <input type="radio" class="btn-check" id="conbtn" autocomplete="off">
-                        <label class="btn" for="conbtn" name="conhead">&emsp;CONTENTS&emsp;</label>
+                        <input type="radio" class="btn-check" id="conbtn" autocomplete="off" name="conhead">
+                        <label class="btn" for="conbtn">&emsp;CONTENTS&emsp;</label>
                     </div>
                 </div>
             </div>
